Bug 119340 - Poor loading and scrolling perfs since LO6.1
Summary: Poor loading and scrolling perfs since LO6.1
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.3
Keywords: bibisected, bisected, perf, regression
: 119173 119438 119655 119797 120448 (view as bug list)
Depends on:
Blocks: CommonSalLayout-refactoring-regressions
  Show dependency treegraph
 
Reported: 2018-08-18 08:17 UTC by Pierre C
Modified: 2018-10-22 06:49 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Testfile (1.12 MB, application/vnd.oasis.opendocument.text)
2018-08-18 08:28 UTC, Pierre C
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre C 2018-08-18 08:17:35 UTC
Step to reproduce :
just open the test file
The loading time doubles between LO 6.1 and LO 6.0. When Scrolling, there is lags with LO 6.1 and not LO 6.0
deepening on the computer, the loading time is over 10 to 20 s with LO6.0 and 20 to 50 s to LO 6.1

All computers has an SSD, a minimum 6 GB of RAM and at least a 2 GHz CPU

LO master works fine
Comment 1 Pierre C 2018-08-18 08:28:29 UTC
Created attachment 144262 [details]
Testfile
Comment 2 Pierre C 2018-08-29 16:19:51 UTC
I've tried with LO 6.1.2 dev. Same problem. But Not with Lo master. If the problem is solved in LO master, can't it be back-ported to LO 6.1 ?
Comment 3 Telesto 2018-08-29 16:30:21 UTC
Sounds like bug 119173 (see bug 119173 comment 3 for few variants)
Comment 4 Xisco Faulí 2018-08-29 16:43:40 UTC
Also reproduced in

Versión: 6.1.0.3
Id. de compilación: efb621ed25068d70781dc026f7e9c5187a4decd1
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group threaded
Comment 5 Xisco Faulí 2018-08-29 16:51:08 UTC
(In reply to Telesto from comment #3)
> Sounds like bug 119173 (see bug 119173 comment 3 for few variants)

Indeed, regression introduced by https://cgit.freedesktop.org/libreoffice/core/commit/?id=fad862e290d727fc9fefe206f6e4b807482c4175

Adding Cc: to Jan-Marek Glogowski

I'll create a metabug...
Comment 6 Commit Notification 2018-09-04 17:21:35 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e7a1ff3926e86705199aa9814089e90f01c02ed

tdf#119340 WIN don't always re-init the HFONT

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2018-09-05 06:28:58 UTC
*** Bug 119655 has been marked as a duplicate of this bug. ***
Comment 8 Telesto 2018-09-05 06:59:29 UTC
*** Bug 119438 has been marked as a duplicate of this bug. ***
Comment 9 Telesto 2018-09-05 07:01:21 UTC
*** Bug 119173 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2018-09-11 19:32:40 UTC
*** Bug 119797 has been marked as a duplicate of this bug. ***
Comment 11 Pierre C 2018-09-18 06:15:17 UTC
As I told it on my first comment, I never had any problem with LO master 6.2
Just With LO 6.1.0.3 and next 6.1 

I've just tried with latest LO master 6.2 and it still works fine

So, maybe the patch should be back-ported to LO 6.1 branch ?
Comment 12 Xisco Faulí 2018-09-18 08:14:55 UTC
@Jan-Marek Glogowski, Do you plan to backport the fix for this issue to 6.1 ?
Comment 13 Pierre C 2018-09-20 11:57:59 UTC
Sadly this bug won't be solved for LO 6.1.2.1
Comment 14 Commit Notification 2018-09-20 15:44:54 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fbc3818a70bad11f2b28d005d97c3491a41f711e&h=libreoffice-6-1

tdf#119340 WIN don't always re-init the HFONT

It will be available in 6.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Pierre C 2018-09-23 13:28:26 UTC
Tested with today's LO 6.1.3dev
All is fine ! Thank's for the work
Comment 16 Xisco Faulí 2018-09-25 10:05:13 UTC
(In reply to Pierre C from comment #15)
> Tested with today's LO 6.1.3dev
> All is fine ! Thank's for the work

Setting to VERIFIED then.
Thanks for testing it
Comment 17 Xisco Faulí 2018-10-10 12:08:02 UTC
*** Bug 120448 has been marked as a duplicate of this bug. ***
Comment 18 Jiero 2018-10-22 06:49:30 UTC
Installed from daily build and still poor loading time compare with 6.0.7 RC1.